# Sienn-AI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  monitor_training.sh  pyproject.toml  requirements-core.txt  requirements.txt  test_model_quality.py
backend/app/: __init__.py  celery_app.py  db.py  main.py  models.py  tasks.py
backend/app/core/: config.py  logging_config.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/routes/: datasets.py  demo.py  exports.py  inference.py  job_metrics.py  jobs.py  metrics.py  models.py
backend/app/services/: __init__.py  dataset_service.py  export_service.py  finetuning_service.py  model_cache_service.py  model_service.py  storage_service.py
backend/app/utils/: db_helpers.py  file_validation.py  health_check.py  validators.py
backend/scripts/: create_demo_data.py  enhance_demo_data.py  health_check.py  init_db.py  lint.sh  optimize_cache.py  test_gguf_export.py  test_minio.py  test_minio_simple.py
backend/tests/: chat_with_model.py  conftest.py  test_utils.py  train_full_and_chat.py
backend/tests/unit/: test_dataset_service.py  test_finetuning_service.py  test_model_service.py
docs/: API_DOCUMENTATION.md  FAQ.md  INSTALLATION.md  LOGGING.md  MODEL_SELECTION_SYSTEM.md  QUICKSTART.md  TESTING_GUIDE.md  USER_GUIDE.md
docs/contexte/: API_DOCUMENTATION_BRIEF.md  ARCHITECTURE.md  COPILOT_CONTEXT.md  ROADMAP.md  TODO.md
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/__tests__/: utils.test.ts
frontend/src/app/: App.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/config/: env.ts
frontend/src/styles/: animations.css  components.css  globals.css  liquid-glass.css
frontend/src/types/: api.ts
frontend/src/utils/: cn.ts  formatters.ts
scripts/: build_production.sh  demo_automated.sh  demo_workflow.sh  release.sh  validate_release.sh
test_data/: conversations_quality.csv  python_dataset_large.csv  python_training_100.csv
tests/: test_api_inference.py  test_complete.py  test_inference.py
(+39 files in other folders)
